# my-awesome-projects

./: .gitignore  .project  .springBeans  README.md  pom.xml  spring-tutorial.mwb.bak  spring-tutorial.sql
Cloud Storage API/: README.md  credentials.csv
ContentMatch/: .classpath  (+2 more)
Up and Running with OpenGL/: CMakeLists.txt  README.md  run.sh
Up and Running with OpenGL/examples/: Cube.cpp  DynamicMesh.cpp  GLFWwindow.cpp  Keyboard.cpp  ModelView.cpp  Mouse.cpp  Texture.cpp  TriangleBuffer.cpp  TriangleColorBuffer.cpp  TriangleOrtho.cpp  Version.cpp
Up and Running with OpenGL/include/: gl_data.hpp  gl_error.hpp  gl_lib.hpp  gl_macros.hpp  gl_mesh.hpp  gl_texture.hpp
Up and Running with OpenGL/xcode/: CMakeCache.txt  cmake_install.cmake
Up and Running with OpenGL/xcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ALL_BUILD_cmakeRulesBuildPhase.makeMinSizeRel  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug  ZERO_CHECK_cmakeRulesBuildPhase.makeMinSizeRel
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/ALL_BUILD.build/: Script-2EAF04D3C9FC404182F4E428.sh
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Cube.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/DynamicMesh.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Extensions.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/GLFWApp.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/GLFWwindow.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Immediate.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/ImmediateTriangles.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Keyboard.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Lighting.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/LightingAndTexture.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Model.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/ModelView.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Mouse.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.build/Debug/Texture.build/: dgph
Up and Running with OpenGL/xcode/UaR_OpenGL.xcodeproj/: project.pbxproj
Up and Running with OpenGL/xcode/glfw/: cmake_install.cmake  cmake_uninstall.cmake
Up and Running with OpenGL/xcode/glfw/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelease  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  install_postBuildPhase.makeRelease  uninstall_cmakeRulesBuildPhase.makeRelWithDebInfo
Up and Running with OpenGL/xcode/glfw/GLFW.xcodeproj/: project.pbxproj
Up and Running with OpenGL/xcode/glfw/docs/: Doxyfile
Up and Running with OpenGL/xcode/glfw/src/: cmake_install.cmake  glfw3.pc
Up and Running with OpenGL/xcode/glfw/tests/: cmake_install.cmake
(+6946 files in other folders)
